# emulator101

./: .clang-format  CMakeLists.txt
disas/: Disassemble8080.cpp  Disassemble8080.h
src/: RomProcessor.cpp  RomProcessor.h  main.cpp
src/disas/: Disassemble8080.cpp  Disassemble8080.h
src/emulator/: Emulator8080.cpp  Emulator8080.h
src/processor8080/: FileProcessor.cpp  FileProcessor.h
